@@ -9,3 +9,10 @@
 2011-03-19  Mike Blumenkrantz
 
         * Fix crash in e-notify-send when invalid DBUS_SESSION_BUS_ADDRESS is specified
+
+2011-04-27  Carsten Haitzler (The Rasterman)
+
+        * Fix bug when app has no idle time (always busy), idlers
+        can't run to process edbus dispatches. Move this to an idle
+        enterer that wil be run.
+
